// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextWithSeparator should render a TextWithSeparator with a custom separator 1`] = `
<div>
  <p
    class="textWithSeparator"
  >
    <span>
      March 08, 2021
    </span>
    <span
      class="textWithSeparator__separator"
    >
      |
    </span>
    <span>
      9 minute read
    </span>
  </p>
</div>
`;

exports[`TextWithSeparator should render the TextWithSeparator component 1`] = `
<div>
  <p
    class="textWithSeparator"
  >
    <span>
      San Mateo, CA
    </span>
    <span
      class="textWithSeparator__separator"
    >
      ▸
    </span>
    <span>
      June 2018 – Present
    </span>
  </p>
</div>
`;
